--- a/css/style.css
+++ b/css/style.css
@@ -1520,11 +1520,13 @@ footer {
   color: #dfe7ea;
 }
 
-.slider-control__genotipo {
-  left: 50%;
-  top: -40px !important;
-  transform: translateX(-50%);
-  text-align: center;
+@media screen and (max-width: 500px) {
+  .slider-control__genotipo {
+    left: 50%;
+    top: -40px !important;
+    transform: translateX(-50%);
+    text-align: center;
+  }
 }
 
 .genotipo-slider::before {
