--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ footer {
   color: #818181;
 }
 
+.second-gray__genotipo {
+  color: #323232;
+}
+
 @media screen and (max-width: 576px) {
   button.px-5 {
     padding-left: 2rem !important;
@@ -41,6 +45,23 @@ footer {
 @media screen and (max-width: 576px) {
   nav.navbar {
     height: 60px !important;
+  }
+}
+
+.dinning-room__overlay::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (max-width: 576px) {
+  .corner-image {
+    width: 80px !important;
+    height: auto !important;
   }
 }
 
