--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ footer {
   color: #323232;
 }
 
+.bg-light-gray__genotipo {
+  background-color: #f2f2f2;
+}
+
 @media screen and (max-width: 576px) {
   button.px-5 {
     padding-left: 2rem !important;
